# Clipper.cpp

./: CMakeLists.txt  README  README.md  clipperConfig.cmake.in  clipperConfigVersion.cmake.in  package.xml
examples/cpp_agg/: agg_conv_clipper.h  clipper_test.cpp  clipper_test.vcxproj.filters
examples/cpp_cairo/: cairo_clipper.cpp  cairo_clipper.hpp  main.cpp
examples/cpp_console/: clipper_console_demo.cpp
examples/cpp_opengl/: main.cpp
inc/clipper/: clipper.hpp
src/: clipper.cpp
