<?xml version="1.0"?>
<package format="3">
  <name>clipper</name>
  <version>0.1.0</version>
  <description>
    Clipper wrapped in catkin for ROS
  </description>

  <maintainer email="alexis.paques@be.bosch.com">Alexis Paques</maintainer>

  <license>Boost-1.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
